Второе изменение, управление shell, вывод на html, and syntax tags(Думаю надо сначала у себ язапускать а потом уже деплоить :/)

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -58,7 +58,7 @@
             <p>__________________________________________________________</p>
             <h1><a href="#">{{  post.title  }}</a></h1>
             <p>{{  post.text|linebreaksbr  }}</p>
-            <p>published@_@: {{  post.published_date }}</p>
+            <p>Ебучая дата на момент написания: {{  post.published_date }}</p>
         </div>
       {% endfor %}
       <br>
@@ -67,7 +67,6 @@
       <br>
       <br>
       <br>
-      <p>Ебучая дата на момент написания: 03.04.2020 16:15</p>
     </div>
 
   </body>
