чу-чуть подправил)

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Попа(_☼_)</title>
+    <title>Джанкок</title>
   </head>
   <body>
     <div>
@@ -11,21 +11,12 @@
       __________________________________________________________
     </strong>
     <div class="">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br><br>
-      <br>
-      <br>
-      <br>
-      <br>
 
       <h1><a href="">Я и Джанго. Первый раз)</a></h1>
       <p>Всё началось приблизительно месяц назад, может и немного больше. Я случайно услышал от друга что то занимается на яндекс практикум
       вот
       ну и я тоже начал там заниматься, только пайтоно а не джанго, тогда для меня это были грёбаная Черепаха Джанго, даже если это Ранго, и он не черепаха, я почему то думал что это черепаха)  </p>
-      <p>Ебучая дата на момент написания: 03.04.2020 13:53</p>
+      <p>дата на момент написания: 03.04.2020 13:53</p>
     </div>
     <strong>
       __________________________________________________________
@@ -33,7 +24,7 @@
     <div class="">
       <h1><a href=""> Тестирование</a></h1>
       <strong>Начался заниматься этим только вчера, но надо бы уже начать дедлать что то)</strong>
-      <p>Ебучая дата на момент написания: 03.04.2020 13:53</p>
+      <p>! дата на момент написания: 03.04.2020 13:53</p>
     </div>
     <strong>
       __________________________________________________________
@@ -41,7 +32,7 @@
     <div class="">
 
       {{  posts  }}
-      <p>Ебучая дата на момент написания: 03.04.2020 16:15</p>
+      <p>! дата на момент написания: 03.04.2020 16:15</p>
 
     </div>
     <div class="">
@@ -58,7 +49,7 @@
             <p>__________________________________________________________</p>
             <h1><a href="#">{{  post.title  }}</a></h1>
             <p>{{  post.text|linebreaksbr  }}</p>
-            <p>Ебучая дата на момент написания: {{  post.published_date }}</p>
+            <p>! дата на момент написания: {{  post.published_date }}</p>
         </div>
       {% endfor %}
       <br>
