css & basic tamplates.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,64 +1,13 @@
-<html lang="ru" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Джанкок</title>
-  </head>
-  <body>
-    <div>
-        <h1><a href="">Да здравствует ►☼◄ </a></h1>
-    </div>
-    <strong>
-      __________________________________________________________
-    </strong>
-    <div class="">
+{% extends 'blog/base.html' %}
 
-      <h1><a href="">Я и Джанго. Первый раз)</a></h1>
-      <p>Всё началось приблизительно месяц назад, может и немного больше. Я случайно услышал от друга что то занимается на яндекс практикум
-      вот
-      ну и я тоже начал там заниматься, только пайтоно а не джанго, тогда для меня это были грёбаная Черепаха Джанго, даже если это Ранго, и он не черепаха, я почему то думал что это черепаха)  </p>
-      <p>дата на момент написания: 03.04.2020 13:53</p>
-    </div>
-    <strong>
-      __________________________________________________________
-    </strong>
-    <div class="">
-      <h1><a href=""> Тестирование</a></h1>
-      <strong>Начался заниматься этим только вчера, но надо бы уже начать дедлать что то)</strong>
-      <p>! дата на момент написания: 03.04.2020 13:53</p>
-    </div>
-    <strong>
-      __________________________________________________________
-    </strong>
-    <div class="">
-
-      {{  posts  }}
-      <p>! дата на момент написания: 03.04.2020 16:15</p>
-
-    </div>
-    <div class="">
-      <a href="#">KOРОЧЕ ТУТ УЖЕ ИЗВЛЕКАЕМ ИЗ БД ТО ЧТО У НАС ЕСТЬ</a>
-      >
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      {% for post in posts %}
-        <div class="">
-            <p>__________________________________________________________</p>
-            <h1><a href="#">{{  post.title  }}</a></h1>
-            <p>{{  post.text|linebreaksbr  }}</p>
-            <p>! дата на момент написания: {{  post.published_date }}</p>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-      {% endfor %}
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
-
-  </body>
-</html>
+    {% endfor %}
+{% endblock %}
