--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -10,23 +10,12 @@
     text-decoration: none;
 }
 
-.page-text {
-    background-color: #ff9400;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
-}
-
-.page-text h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 36pt;
-    text-decoration: none;
-}
 .content {
     margin-left: 40px;
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Pacifico', cursive;
+    font-family: 'Lobster', cursive;
 }
 
 .date {
