--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,13 +1,19 @@
 {% extends 'blog/base.html' %}
-
+{% load static %}
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
-            <div class="date">
-                {{ post.published_date }}
-            </div>
-            <h1><a href="">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
-    {% endfor %}
+<div class="content container">
+  <div class="row">
+      <div class="col-md-8">
+          {% for post in posts %}
+              <div class="post">
+                  <div class="date">
+                      <p>Опубликовано: {{ post.published_date }}</p>
+                  </div>
+                  <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                  <p>{{ post.text|linebreaksbr }}</p>
+              </div>
+          {% endfor %}
+      </div>
+  </div>
+</div>
 {% endblock %}
