--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,15 +1,19 @@
 {% load static %}
-<html lang="ru" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <title>ДжанGO</title>
-  </head>
-  <body>
+<html>
+    <head>
+        <title>Блог Хуршеда</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    </head>
+    <body>
       <div class="page-header">
-          <h1><a href="/">Hell low, wwowld</a></h1>
+          <a href="/admin" class="top-menu"><span class="glyphicon glyphicon-home"></span></a>
+          {% if user.is_authenticated %}
+              <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+              {% endif %}
+          <h1><a href="/">Блог</a></h1>
       </div>
       <div class="content container">
           <div class="row">
