--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="icon" type="image" href="https://img.icons8.com/color/100/000000/astronaut-helmet.png">
     </head>
     <body>
       <div class="page-header">
@@ -13,7 +14,7 @@
           {% if user.is_authenticated %}
               <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
               {% endif %}
-          <h1><a href="/">Блог</a></h1>
+          <h1><a href="/" class="blog">Блог</a></h1>
       </div>
       <div class="content container">
           <div class="row">
@@ -23,5 +24,11 @@
               </div>
           </div>
       </div>
+      <footer class="footer">
+        <h4 class="footer-author">Фамилия Хуршед Отчество</h4>
+        <h1 class="footer-author textik"><a href="{% url 'about' %}">▼Про меня</a> </h1>
+        <h1 class="footer-author textik"><a href="{% url 'contacts' %}">▼Контакты</a></h1>
+        <h1 class="footer-author textik"><a href="https://www.nationalgeographic.com/science/2016/11/exploring-mars-map-panorama-pictures/" target="_blank">▼Кое-что</a></h1>
+        </footer>
   </body>
 </html>
