--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,8 +19,9 @@
 {% for comment in post.comments.all %}
     <div class="comment">
         <div class="date">{{ comment.created_date }}</div>
-        <strong>{{ comment.author }}</strong>
-        <p>{{ comment.text|linebreaks }}</p>
+        
+        <strong>Имя: {{ comment.author }}</strong>
+        <p>Комментарий: {{ comment.text|linebreaks }}</p>
     </div>
 {% empty %}
     <p>No comments here yet :(</p>
