--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,7 +28,7 @@
         <h4 class="footer-author">Фамилия Хуршед Отчество</h4>
         <h1 class="footer-author textik"><a href="{% url 'about' %}">▼Про меня</a> </h1>
         <h1 class="footer-author textik"><a href="{% url 'contacts' %}">▼Контакты</a></h1>
-        <h1 class="footer-author textik"><a href="https://www.nationalgeographic.com/science/2016/11/exploring-mars-map-panorama-pictures/" target="_blank">▼Кое-что</a></h1>
+        <h1 class="footer-author textik"><a href="{% url 'unique' %}" target="_blank">▼Кое-что</a></h1>
         </footer>
   </body>
 </html>
