--- a/blog/templates/blog/unique.html
+++ b/blog/templates/blog/unique.html
@@ -1,11 +1,17 @@
+
 {% load static %}
-<!DOCTYPE html>
 <html lang="ru">
 <head>
+<head>
+    <title>Блог Хуршеда</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+    <link rel="icon" type="image" href="https://img.icons8.com/color/100/000000/astronaut-helmet.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Procrastinate.</title>
+  <title>Прокрастинация</title>
   <link rel="stylesheet" href="{% static 'css/unique.css' %}">
 </head>
 <body>
