--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,7 @@
     <body>
       <div class="page-header">
           <a href="/admin" class="top-menu"><span class="glyphicon glyphicon-home"></span></a>
+          <a href="{% url 'post_search' %}" class="top-menu"><span class="glyphicon glyphicon-star"></span></a>
           {% if user.is_authenticated %}
               <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
               {% endif %}
