Revert "Revert "Ticket mon 9""

--- a/blog/templates/blog/post_error.html
+++ b/blog/templates/blog/post_error.html
@@ -25,8 +25,12 @@
               </div>
           </div>
       </div>
+      <div class="content container">
+          <h1> USER MUST BE AUTHORIZED</h1>
+      </div>
+
+
       <footer class="footer">
-        <h4 class="footer-author">Фамилия Хуршед Отчество</h4>
         <h1 class="footer-author textik"><a href="{% url 'about' %}">▼Про меня</a> </h1>
         <h1 class="footer-author textik"><a href="{% url 'contacts' %}">▼Контакты</a></h1>
         <h1 class="footer-author textik"><a href="{% url 'unique' %}" target="_blank">▼Кое-что</a></h1>
