[fix] fixes codestyle loke PEP8

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<html>
+<html lang="ru">
     <head>
         <title>Блог Хуршеда</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
